syntax = "proto3";
import "google/protobuf/any.proto";

option csharp_namespace = "GrpcService";

package BusinessServ;

// The greeting service definition.
service BusinessServer {
  // Sends a greeting
  rpc PostNote (Request) returns (Reply);
  rpc GetNote (Request) returns (Reply);
  rpc DeleteNote (Request) returns (Reply);
  rpc GetGroup (Request) returns (Reply);
  rpc PostGroup (Request) returns (Reply);
  rpc DeleteGroup  (Request) returns (Reply);
  rpc RegisterUser(Request) returns (Reply);
  rpc ValidateUser(Request) returns (Reply);
}


// The request message containing the user's name.
message Request {
  string name = 1;
  string type = 2;
}

// The response message containing the greetings.
message Reply {
  string message = 1;
  string type = 2;
}
